# movie-average

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
movie-average/: CMakeLists.txt
movie-average/include/: frame_handlers.h  movie_decoder.h  spin_lock.h
movie-average/src/: frame_handlers.cpp  movie_average.cpp  movie_decoder.cpp
